Time: 1 ms (99.73%), Space: 44 MB (96.25%) - LeetHub